--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -336,7 +336,7 @@
 
         <li class="divider-lbf col-xs-12"><a href="#" class="inactive"></a></li>
 
-        <li class="col-xs-12"  data-toggle="collapse" data-target="#mobile_nav" data-menuanchor="ourProducts">
+        <li class="col-xs-12">
           <a href="{{ path('lbf_main_homepage') }}#ourProducts" class="no_style_a">
             <button class="btn btn-log-xs"  id="btn_section2">
               {{ 'header.titles.ourProducts' | trans }}
@@ -346,7 +346,7 @@
 
         <li class="divider-lbf col-xs-12"><a href="#" class="inactive"></a></li>
         
-        <li class="col-xs-12"  data-toggle="collapse" data-target="#mobile_nav" data-menuanchor="aboutUs">
+        <li class="col-xs-12">
           <a href="{{ path('lbf_main_homepage') }}#aboutUs" class="no_style_a">
             <button class="btn btn-log-xs " id="btn_section1">
               {{ 'header.titles.aboutUs' | trans }}
