--- a/app/Resources/views/includes/modals.html.twig
+++ b/app/Resources/views/includes/modals.html.twig
@@ -39,7 +39,7 @@
           {{ 'modal.modalQuality.tested' | trans }}
         </div>
       </div>
-      <div class="modal-footer padding0">
+      <div class="modal-footer">
         <button type="button" class="btn btn-modal" data-dismiss="modal">
           {{ 'modal.actions.close' | trans }}
         </button>
@@ -105,7 +105,7 @@
           {{ 'modal.modalReservation.remarkContent' | trans }}
         </div>
       </div>
-      <div class="modal-footer padding0">
+      <div class="modal-footer">
         <button type="button" class="btn btn-modal" data-dismiss="modal">
           {{ 'modal.actions.close' | trans }}
         </button>
@@ -208,7 +208,7 @@
           </div>
         </div>
       </div>
-      <div class="modal-footer padding0">
+      <div class="modal-footer">
         <button type="button" class="btn btn-modal" data-dismiss="modal">
           {{ 'modal.actions.close' | trans }}
         </button>
