--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -75,7 +75,7 @@
 	          	</div> 	
 				<br/>
 	            <div class="form-group row">
-	                <div class="input-icon col-md-12">
+	                <div class="input-icon col-lg-12 col-md-12 col-sm-12 col-xs-12">
 	                	<textarea class="form-control placeholder-no-fix" name="corpsMail" id="corpsMail" placeholder="{{ 'footer.contact.message' | trans }}"></textarea>
 	                </div>
 	            </div>
