--- a/src/LBF/MainBundle/Resources/views/Main/cart.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/cart.html.twig
@@ -15,7 +15,7 @@
 		</div>
 
 		<div id="fullpage">
-			<div class="section section_padding" id="cartSection">
+			<div class="section section_login section_padding" id="cartSection">
 				<br/><br/>
 
 				<script type="text/javascript">
