--- a/src/LBF/MainBundle/Resources/views/Main/confirm.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/confirm.html.twig
@@ -15,7 +15,7 @@
 		</div>
 
 		<div id="fullpage">
-			<div class="section section_padding" id="confirmSection">
+			<div class="section section_login section_padding" id="confirmSection">
 				<br/><br/>
 
 		        <div id="breadcrumb" class="center row">
