--- a/src/LBF/MainBundle/Resources/views/Main/contactThankYou.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/contactThankYou.html.twig
@@ -15,7 +15,7 @@
 		</div>
 
 		<div id="fullpage">
-			<div class="section section_padding row">
+			<div class="section section_login section_padding row">
 				<div class="presentation_texte">
 					<div class="row center">
 		        		<div class="col-lg-2 col-md-2 col-sm-2 hidden-xs"></div>
