--- a/src/LBF/MainBundle/Resources/views/Main/order.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/order.html.twig
@@ -15,7 +15,7 @@
 		</div>
 
 		<div id="fullpage">
-			<div class="section section_padding" id="orderSection">
+			<div class="section section_login section_padding" id="orderSection">
 				<br/><br/>
 
 	            <div id="breadcrumb" class="center row">
