--- a/src/LBF/UserBundle/Resources/views/User/indexUser.html.twig
+++ b/src/LBF/UserBundle/Resources/views/User/indexUser.html.twig
@@ -15,7 +15,7 @@
 		</div>
 
 		<div id="fullpage">
-			<div class="section section_padding" id="userSection">
+			<div class="section section_login section_padding" id="userSection">
 				<br/><br/>
 				
 				<div class="row">
