email change and login rights

--- a/src/LBF/AdminBundle/Resources/views/Admin/emailConfirmAdmin.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/emailConfirmAdmin.html.twig
@@ -200,7 +200,7 @@
                                       <br/><br/>
 
                                       <div style="width: 100%; text-align:center;">
-                                        <a href="http://www.lebuffetfrances.com/admin" style="
+                                        <a href="http://www.lebuffetfrances.com/es/admin" style="
                                           padding: 6px 10px;
                                           font-size:12px;
                                           text-decoration:none;
