--- a/src/LBF/UserBundle/Resources/views/User/emailConfirmation.html.twig
+++ b/src/LBF/UserBundle/Resources/views/User/emailConfirmation.html.twig
@@ -192,7 +192,7 @@
                                       <br/><br/>
 
                                       <div style="width: 100%; text-align:center;">
-                                        <a href="http://www.lebuffetfrances.com/user#current" style="
+                                        <a href="http://www.lebuffetfrances.com/es/user" style="
                                           padding: 6px 10px;
                                           font-size:12px;
                                           text-decoration:none;
